# typing-contest-bot

./: .gitignore  CONTRIBUTING.md  README.md  constants.py  main.py  pyproject.toml  requirements.txt
cogs/: typing_contest.py
