[tool.poetry]
name = "typing-contest-bot"
version = "0.1.0"
description = "Typing Contest Discord Bot"
authors = ["lifeadventurer <life0adventurer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
discord-py = "^2.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
